try model build without good result

--- a/preliminary_preprocessing.ipynb
+++ b/preliminary_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "[11 rows x 25 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
        "                                ('drop', 'drop', ['ICorPM', 'Unnamed: 0'])])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1182,7 @@
        "[7237 rows x 21 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1721,7 +1721,7 @@
        "[7237 rows x 260 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1740,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1757,7 +1757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1768,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1851,7 +1851,7 @@
        "                 RandomForestRegressor(random_state=16))])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1872,7 +1872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1890,70 +1890,294 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.dummy import DummyRegressor\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.model_selection import cross_val_score, cross_validate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cross_val_results = {}\n",
-    "scoring_metrics = 'f1'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pipe_lr = make_pipeline(LogisticRegression(max_iter=1000, n_jobs=-1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# cross_val_results['logreg'] = pd.DataFrame(cross_validate(pipe_lr,\n",
-    "#                                                           X_train,\n",
-    "#                                                           y_train, \n",
-    "#                                                           return_train_score=True, \n",
-    "#                                                           scoring=scoring_metrics)).agg(['mean', 'std']).round(3).T\n",
+    "cross_val_results_reg = {}\n",
     "\n",
-    "# cross_val_results['logreg']"
+    "# scoring_metrics = 'f1'\n",
+    "\n",
+    "models = {\n",
+    "    \"Baseline\": DummyRegressor(),\n",
+    "    \"KNN Regressor\": KNeighborsRegressor(),\n",
+    "    \"Ridge\": Ridge(),\n",
+    "    \"Random Forest Regressor\": RandomForestRegressor(),\n",
+    "}\n",
+    "\n",
+    "score_types_reg = {\n",
+    "    \"neg_mean_squared_error\": \"neg_mean_squared_error\",\n",
+    "    \"neg_root_mean_squared_error\": \"neg_root_mean_squared_error\",\n",
+    "    \"neg_mape\": \"neg_mean_absolute_percentage_error\", \n",
+    "    \"r2\": \"r2\",\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def corss_validate_result(model_name, model_type):\n",
+    "    pipe = make_pipeline(\n",
+    "        model_type\n",
+    "    )\n",
+    "    cross_val_results_reg[model_name] = pd.DataFrame(cross_validate(pipe,\n",
+    "                                                                    X_train,\n",
+    "                                                                    y_train, \n",
+    "                                                                    return_train_score=True, \n",
+    "                                                                    scoring=list(score_types_reg.values()))).agg(['mean', 'std']).round(3).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# corss_validate_result(\"KNN_reg\", KNeighborsRegressor())\n",
+    "for model_item in models.items():\n",
+    "    model_name = model_item[0]\n",
+    "    model_type = model_item[1]\n",
+    "    # print(model_name)\n",
+    "    # print(type(model_type))\n",
+    "    corss_validate_result(model_name, model_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\chen\\miniconda3\\envs\\environment\\lib\\site-packages\\sklearn\\model_selection\\_split.py:684: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
-      "  warnings.warn(\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Baseline</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">KNN Regressor</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Ridge</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Random Forest Regressor</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>fit_time</th>\n",
+       "      <td>1.700000e-02</td>\n",
+       "      <td>1.000000e-03</td>\n",
+       "      <td>6.400000e-02</td>\n",
+       "      <td>2.000000e-03</td>\n",
+       "      <td>7.600000e-02</td>\n",
+       "      <td>4.000000e-03</td>\n",
+       "      <td>6.878000e+01</td>\n",
+       "      <td>2.164000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>score_time</th>\n",
+       "      <td>4.000000e-03</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.460000e-01</td>\n",
+       "      <td>1.000000e-02</td>\n",
+       "      <td>2.400000e-02</td>\n",
+       "      <td>3.000000e-03</td>\n",
+       "      <td>1.540000e-01</td>\n",
+       "      <td>8.000000e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_neg_mean_squared_error</th>\n",
+       "      <td>-1.355838e+12</td>\n",
+       "      <td>2.392836e+11</td>\n",
+       "      <td>-1.545849e+12</td>\n",
+       "      <td>2.621707e+11</td>\n",
+       "      <td>-1.437829e+12</td>\n",
+       "      <td>2.560000e+11</td>\n",
+       "      <td>-1.544693e+12</td>\n",
+       "      <td>2.815644e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>train_neg_mean_squared_error</th>\n",
+       "      <td>-1.355476e+12</td>\n",
+       "      <td>5.982645e+10</td>\n",
+       "      <td>-1.014057e+12</td>\n",
+       "      <td>5.227830e+10</td>\n",
+       "      <td>-1.277730e+12</td>\n",
+       "      <td>5.903543e+10</td>\n",
+       "      <td>-2.133805e+11</td>\n",
+       "      <td>1.277609e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_neg_root_mean_squared_error</th>\n",
+       "      <td>-1.160710e+06</td>\n",
+       "      <td>1.036222e+05</td>\n",
+       "      <td>-1.239658e+06</td>\n",
+       "      <td>1.066366e+05</td>\n",
+       "      <td>-1.195164e+06</td>\n",
+       "      <td>1.084653e+05</td>\n",
+       "      <td>-1.238555e+06</td>\n",
+       "      <td>1.155167e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>train_neg_root_mean_squared_error</th>\n",
+       "      <td>-1.164022e+06</td>\n",
+       "      <td>2.568754e+04</td>\n",
+       "      <td>-1.006739e+06</td>\n",
+       "      <td>2.584747e+04</td>\n",
+       "      <td>-1.130127e+06</td>\n",
+       "      <td>2.603988e+04</td>\n",
+       "      <td>-4.617623e+05</td>\n",
+       "      <td>1.397041e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_neg_mean_absolute_percentage_error</th>\n",
+       "      <td>-8.912000e+00</td>\n",
+       "      <td>4.364000e+00</td>\n",
+       "      <td>-5.768000e+00</td>\n",
+       "      <td>2.105000e+00</td>\n",
+       "      <td>-7.223000e+00</td>\n",
+       "      <td>5.428000e+00</td>\n",
+       "      <td>-1.146800e+01</td>\n",
+       "      <td>7.912000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>train_neg_mean_absolute_percentage_error</th>\n",
+       "      <td>-8.925000e+00</td>\n",
+       "      <td>1.139000e+00</td>\n",
+       "      <td>-4.509000e+00</td>\n",
+       "      <td>6.670000e-01</td>\n",
+       "      <td>-7.703000e+00</td>\n",
+       "      <td>1.044000e+00</td>\n",
+       "      <td>-4.136000e+00</td>\n",
+       "      <td>1.044000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_r2</th>\n",
+       "      <td>-1.000000e-03</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>-1.420000e-01</td>\n",
+       "      <td>2.600000e-02</td>\n",
+       "      <td>-6.100000e-02</td>\n",
+       "      <td>1.700000e-02</td>\n",
+       "      <td>-1.390000e-01</td>\n",
+       "      <td>4.300000e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>train_r2</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>2.520000e-01</td>\n",
+       "      <td>1.900000e-02</td>\n",
+       "      <td>5.700000e-02</td>\n",
+       "      <td>5.000000e-03</td>\n",
+       "      <td>8.430000e-01</td>\n",
+       "      <td>6.000000e-03</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              Baseline                \\\n",
+       "                                                  mean           std   \n",
+       "fit_time                                  1.700000e-02  1.000000e-03   \n",
+       "score_time                                4.000000e-03  0.000000e+00   \n",
+       "test_neg_mean_squared_error              -1.355838e+12  2.392836e+11   \n",
+       "train_neg_mean_squared_error             -1.355476e+12  5.982645e+10   \n",
+       "test_neg_root_mean_squared_error         -1.160710e+06  1.036222e+05   \n",
+       "train_neg_root_mean_squared_error        -1.164022e+06  2.568754e+04   \n",
+       "test_neg_mean_absolute_percentage_error  -8.912000e+00  4.364000e+00   \n",
+       "train_neg_mean_absolute_percentage_error -8.925000e+00  1.139000e+00   \n",
+       "test_r2                                  -1.000000e-03  0.000000e+00   \n",
+       "train_r2                                  0.000000e+00  0.000000e+00   \n",
+       "\n",
+       "                                         KNN Regressor                \\\n",
+       "                                                  mean           std   \n",
+       "fit_time                                  6.400000e-02  2.000000e-03   \n",
+       "score_time                                1.460000e-01  1.000000e-02   \n",
+       "test_neg_mean_squared_error              -1.545849e+12  2.621707e+11   \n",
+       "train_neg_mean_squared_error             -1.014057e+12  5.227830e+10   \n",
+       "test_neg_root_mean_squared_error         -1.239658e+06  1.066366e+05   \n",
+       "train_neg_root_mean_squared_error        -1.006739e+06  2.584747e+04   \n",
+       "test_neg_mean_absolute_percentage_error  -5.768000e+00  2.105000e+00   \n",
+       "train_neg_mean_absolute_percentage_error -4.509000e+00  6.670000e-01   \n",
+       "test_r2                                  -1.420000e-01  2.600000e-02   \n",
+       "train_r2                                  2.520000e-01  1.900000e-02   \n",
+       "\n",
+       "                                                 Ridge                \\\n",
+       "                                                  mean           std   \n",
+       "fit_time                                  7.600000e-02  4.000000e-03   \n",
+       "score_time                                2.400000e-02  3.000000e-03   \n",
+       "test_neg_mean_squared_error              -1.437829e+12  2.560000e+11   \n",
+       "train_neg_mean_squared_error             -1.277730e+12  5.903543e+10   \n",
+       "test_neg_root_mean_squared_error         -1.195164e+06  1.084653e+05   \n",
+       "train_neg_root_mean_squared_error        -1.130127e+06  2.603988e+04   \n",
+       "test_neg_mean_absolute_percentage_error  -7.223000e+00  5.428000e+00   \n",
+       "train_neg_mean_absolute_percentage_error -7.703000e+00  1.044000e+00   \n",
+       "test_r2                                  -6.100000e-02  1.700000e-02   \n",
+       "train_r2                                  5.700000e-02  5.000000e-03   \n",
+       "\n",
+       "                                         Random Forest Regressor                \n",
+       "                                                            mean           std  \n",
+       "fit_time                                            6.878000e+01  2.164000e+00  \n",
+       "score_time                                          1.540000e-01  8.000000e-03  \n",
+       "test_neg_mean_squared_error                        -1.544693e+12  2.815644e+11  \n",
+       "train_neg_mean_squared_error                       -2.133805e+11  1.277609e+10  \n",
+       "test_neg_root_mean_squared_error                   -1.238555e+06  1.155167e+05  \n",
+       "train_neg_root_mean_squared_error                  -4.617623e+05  1.397041e+04  \n",
+       "test_neg_mean_absolute_percentage_error            -1.146800e+01  7.912000e+00  \n",
+       "train_neg_mean_absolute_percentage_error           -4.136000e+00  1.044000e+00  \n",
+       "test_r2                                            -1.390000e-01  4.300000e-02  \n",
+       "train_r2                                            8.430000e-01  6.000000e-03  "
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "cross_val_results['logreg_fs'] = pd.DataFrame(cross_validate(pipe_lr,\n",
-    "                                                             X_train[fs],\n",
-    "                                                             y_train, \n",
-    "                                                             return_train_score=True, \n",
-    "                                                             scoring=scoring_metrics)).agg(['mean', 'std']).round(3).T\n",
-    "\n",
-    "cross_val_results['logreg_fs']"
+    "pd.concat(\n",
+    "    {key: pd.DataFrame(value) for key, value in cross_val_results_reg.items()}, \n",
+    "    axis=1\n",
+    ")"
    ]
   },
   {
