edit pre process

--- a/preliminary_preprocessing.ipynb
+++ b/preliminary_preprocessing.ipynb
@@ -494,6 +494,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_na_values_for_cols(df, list_of_cols, fillna_base_text = 'unspecified'):\n",
+    "    temp_df = df.copy()\n",
+    "    for col in list_of_cols:\n",
+    "        fillna_text_final = col + \"_\" + fillna_base_text\n",
+    "        temp_df[col] = temp_df[col].fillna(fillna_text_final)\n",
+    "        \n",
+    "    return temp_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 109,
    "metadata": {},
    "outputs": [],
@@ -589,7 +604,10 @@
     "               (binary_transformer, binary_cols),\n",
     "               (categorical_transformer, categorical_cols),\n",
     "               ('passthrough', passthrough_cols),\n",
-    "               ('drop', drop_cols)\n",
+    "               ('drop', drop_cols),\n",
+    "               (CountVectorizer(tokenizer=lambda text: text.split(';')), multianswer_cols[0]),\n",
+    "               (CountVectorizer(tokenizer=lambda text: text.split(';')), multianswer_cols[1]),\n",
+    "               (CountVectorizer(tokenizer=lambda text: text.split(';')), multianswer_cols[2])\n",
     "               \n",
     ")"
    ]
@@ -2194,9 +2212,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:environment]",
+   "display_name": "Python 3.10.6 ('573')",
    "language": "python",
-   "name": "conda-env-environment-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
