created script files to be edited

--- a/preliminary_preprocessing.ipynb
+++ b/preliminary_preprocessing.ipynb
@@ -1774,9 +1774,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 185,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fit_time       65.419 (+/- 6.762)\n",
+       "score_time      0.419 (+/- 0.140)\n",
+       "test_score      0.275 (+/- 0.025)\n",
+       "train_score     0.899 (+/- 0.002)\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mean_std_cross_val_scores(\n",
     "    pipe_rf_model_based, X_train, y_train, return_train_score=True\n",
